# sudoku-solver

./: LICENSE  README.mkd  sudoko.cabal  sudoku-solver.cabal
src/: Main.hs  Sudoku.hs
test/: TestMain.hs
