name:               sudoku-solver
version:            0.1.0.0
synopsis:           A Sudoku solver
homepage:           https://github.com/bwhmather/sudoku-solver
license:            BSD3
license-file:       LICENSE
author:             Ben Mather
maintainer:         bwhmather@bwhmather.com
category:           Game
build-type:         Simple
cabal-version:      >=1.10

library
  exposed-modules:    Sudoku
  hs-source-dirs:     src
  exposed:            True
  buildable:          True

  build-depends:      base >=4.7 && <4.8
                    , containers >=0.5.5
                    , array >=0.5 && <0.6

  default-language:   Haskell2010
  ghc-options: -Wall

executable sudoku-solver
  main-is:            Main.hs
  hs-source-dirs:     src

  build-depends:      base >=4.7 && <4.8
                    , containers >=0.5.5
                    , array >=0.5 && <0.6

  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite test-sudoku
  type:               exitcode-stdio-1.0
  main-is:            TestMain.hs
  hs-source-dirs:     src test
  build-depends:      base >=4.7 && <4.8
                    , containers >=0.5.5
                    , array >=0.5 && <0.6
                    , Cabal >=1.10
                    , test-framework
                    , test-framework-quickcheck2
                    , test-framework-hunit
                    , HUnit
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
